clusters/common/apps/monitoring/app/egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${LOCATION}-prometheus
  annotations:
    tailscale.com/tailnet-fqdn: ${LOCATION}-prometheus.raj.ts.net
    # tailscale.com/tailnet-ip: 100.82.116.107
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
  - name: reloader-web
    port: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${FAILOVER}-prometheus
  annotations:
    tailscale.com/tailnet-fqdn: ${FAILOVER}-prometheus.raj.ts.net
    # tailscale.com/tailnet-ip: 100.76.51.184
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
  - name: reloader-web
    port: 8080
    protocol: TCP
