clusters/common/apps/monitoring/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-stack-prometheus-ts
  namespace: monitoring
  annotations:
    tailscale.com/hostname: ${LOCATION}-prometheus
    tailscale.com/proxy-class: common
spec:
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
    targetPort: 9090
  - appProtocol: http
    name: reloader-web
    port: 8080
    protocol: TCP
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: kube-prometheus-stack-prometheus
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerClass: tailscale
