clusters/common/apps/monitoring/app/helmrelease-kube-prometheus-stack.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    tailscale.com/proxy-group: common-ingress
spec:
  defaultBackend:
    service:
      name: grafana
      port: 
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - ${LOCATION}-grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ha
  annotations:
    tailscale.com/proxy-group: common-ingress
spec:
  defaultBackend:
    service:
      name: grafana
      port: 
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
  # ---
  # apiVersion: networking.k8s.io/v1
  # kind: Ingress
  # metadata:
  #   name: kube-prometheus-stack-prometheus
  #   annotations:
  #     tailscale.com/proxy-class: common
  # spec:
  #   defaultBackend:
  #     service:
  #       name: kube-prometheus-stack-prometheus
  #       port: 
  #         number: 9090
  #   ingressClassName: tailscale
  #   tls:
  #     - hosts:
  #         - ${LOCATION}-prometheus
